--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Handsfree - Speech to Text Assistant</title>
     <meta name="description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
     <meta name="theme-color" content="#3B82F6" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Handsfree" />
+    <meta name="application-name" content="Handsfree" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/mic-icon-192.png" />
+    <link rel="apple-touch-icon" href="/mic-icon-192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/mic-icon-192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/mic-icon-512.png" />
     <meta property="og:image" content="/og-image.png" />
   </head>
   <body>
