--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
     <link rel="apple-touch-icon" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/mic-icon-512.png" />
+    <meta property="og:title" content="Handsfree - Speech to Text Assistant" />
+    <meta property="og:description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://handsfree-transcriber.vercel.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Handsfree - Speech to Text Assistant" />
+    <meta name="twitter:description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
