--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Handsfree - Speech to Text Assistant</title>
-    <meta name="description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
+    <title>Speech to Text PRO - Speech to Text AI Assistant</title>
+    <meta name="description" content="Speech to Text transcription with AI-powered text refinement" />
     <meta name="theme-color" content="#3B82F6" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Handsfree" />
-    <meta name="application-name" content="Handsfree" />
+    <meta name="apple-mobile-web-app-title" content="Speech to Text PRO" />
+    <meta name="application-name" content="Speech to Text PRO" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/mic-icon-512.png" />
     <meta property="og:title" content="Handsfree - Speech to Text Assistant" />
-    <meta property="og:description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
+    <meta property="og:description" content="Speech to Text transcription with AI-powered text refinement" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:url" content="https://handsfree-transcriber.vercel.app" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Handsfree - Speech to Text Assistant" />
-    <meta name="twitter:description" content="Handsfree speech-to-text transcription with AI-powered text refinement" />
+    <meta name="twitter:title" content="Speech to Text PRO - Speech to Text AI Assistant" />
+    <meta name="twitter:description" content="Speech to Text transcription with AI-powered text refinement" />
     <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
