sign in with google dialog coming after some free uses, but only after result text is shown

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="apple-touch-icon" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="/mic-icon-192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/mic-icon-512.png" />
-    <meta property="og:title" content="Handsfree - Speech to Text Assistant" />
+    <meta property="og:title" content="Speech to Text PRO - transcription with AI-powered text refinement" />
     <meta property="og:description" content="Speech to Text transcription with AI-powered text refinement" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
-    <meta property="og:url" content="https://handsfree-transcriber.vercel.app" />
+    <meta property="og:url" content="https://speech-to-text.pro" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Speech to Text PRO - Speech to Text AI Assistant" />
     <meta name="twitter:description" content="Speech to Text transcription with AI-powered text refinement" />
